Update form image & upadte list id

--- a/templates/home/header.html.twig
+++ b/templates/home/header.html.twig
@@ -4,4 +4,6 @@
 	<a href="{{path('app_random')}}">Citation</a>
 	<a href="{{path('app_redirect')}}">Redirection</a>
 	<a href="{{path('app_images')}}">Ma gallerie d'image</a>
+	<a href="{{ path('app_image_list') }}">Mes images (CRUD)</a>
+	<a href="{{ path('app_image_new') }}">Ajouter une image</a>
 </nav>
